# Geometry_MININEC

./: Beta_247_315.cpp  Beta_247_315.hpp  CMakeLists.txt  Connections.cpp  Connections.hpp  EllipticIntegral.cpp  ExcitationInput.cpp  ExcitationInput.hpp  GeometryInput.cpp  GeometryInput.hpp  GeometryOutput.cpp  Gosub102.cpp  Gosub102.hpp  Gosub113.cpp  Gosub113.hpp  Gosub135.cpp  Gosub135.hpp  Gosub87.cpp  Gosub87.hpp  ImpedanceMatrixCalculation.cpp  ImpedanceMatrixCalculation.hpp  ImpedanceMatrixFactorization.cpp  ImpedanceMatrixFactorization.hpp  KernelEval.hpp  Kerneleval.cpp  MatSolve.cpp  MatSolve.hpp  PrintCurrent Result.docx  PrintCurrents.cpp  PrintCurrents.hpp  README.md  SimulationState.hpp  SourceData.cpp  SourceData.hpp  Sub_273_312.cpp  Sub_273_312.hpp  main.cpp
